# async-graphql

./: .gitignore  .gitmodules  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  advanced_topics.html  apollo_federation.html  apollo_tracing.html  cache_control.html  cursor_connections.html  custom_extensions.html  custom_scalars.html  custom_subscription_transport  custom_subscription_transport.html  define_enum.html  define_input_object  define_input_object.html  define_schema.html  error_extensions  expanded.rs  feature-comparison.md  index.html  integrations.html  integrations_to_actix_web.html  print.html  query_and_mutation.html  quickstart.html  schema.sdl  searchindex.js
async-graphql-actix-web/: Cargo.toml
async-graphql-actix-web/examples/: subscription.rs  token.rs  upload-file.rs
async-graphql-actix-web/src/: lib.rs  pubsub.rs  request.rs  session.rs  subscription.rs
async-graphql-derive/: Cargo.toml
async-graphql-derive/src/: args.rs  enum.rs  input_object.rs  interface.rs  lib.rs  merged_object.rs  merged_subscription.rs  object.rs  output_type.rs  scalar.rs  simple_object.rs  subscription.rs  union.rs  utils.rs
async-graphql-lambda/: Cargo.toml
async-graphql-lambda/src/: lib.rs
async-graphql-parser/: Cargo.toml
async-graphql-rocket/: Cargo.toml
async-graphql-tide/: Cargo.toml
async-graphql-tide/src/: lib.rs
async-graphql-tide/tests/: graphql.rs  test_utils.rs
async-graphql-warp/: Cargo.toml
async-graphql-warp/src/: lib.rs
benches/: static_schema.rs
benchmark/: Cargo.toml
benchmark/benches/: chat.rs  simple.rs
benchmark/chat/: Cargo.toml
benchmark/chat/src/: lib.rs
benchmark/simple/: Cargo.toml
benchmark/simple/src/: lib.rs
benchmark/src/: lib.rs
derive/: Cargo.toml
derive/src/: args.rs  complex_object.rs  description.rs  directive.rs  enum.rs  input_object.rs  interface.rs  lib.rs  merged_object.rs  merged_subscription.rs  newtype.rs  object.rs  oneof_object.rs  output_type.rs  scalar.rs  simple_object.rs  subscription.rs  type_directive.rs  union.rs  utils.rs  validators.rs
docs/: .gitignore  index.html
docs/book-tests/: Cargo.toml  README.md
docs/book-tests/src/: lib.rs
en/: 404.html  advanced_topics.html  apollo_federation.html  apollo_tracing.html  cache_control.html  context.html  cursor_connections.html  custom_directive.html  custom_extensions.html  custom_input_value_validators  custom_input_value_validators.html  custom_scalars.html  custom_subscription_transport.html  dataloader.html  default_value.html  define_complex_object.html  define_enum.html  define_input_object.html  define_interface.html  define_one_of_object.html  define_schema.html  define_simple_object.html  define_union.html  depth_and_complexity.html  derived_fields.html  error_extensions.html  error_handling.html  extensions.html  extensions_available.html  extensions_inner_working.html  field_guard.html  generic.html  index.html  input_value_validators  input_value_validators.html  integrations.html  integrations_to_actix_web.html  integrations_to_poem.html  integrations_to_tide.html  integrations_to_warp.html  (+16 more)
examples/: actix-web.rs  error_extensions.rs  federation-accounts.rs  federation-products.rs  federation-reviews.rs  helloworld.rs  start-feceration.sh  tide.rs  upload-file.rs
extras/: Cargo.toml  README.md
extras/src/: lib.rs  opentelemetry.rs
extras/src/extensions/: mod.rs  opentelemetry.rs
extras/src/validators/: email_address.rs  mod.rs
integrations/: README.md
integrations/actix-web/: Cargo.toml
integrations/actix-web/src/: batch_request.rs  handler.rs  lib.rs  request.rs  subscription.rs
integrations/actix-web/tests/: graphql.rs  test_utils.rs
integrations/axum/: Cargo.toml  README.md
integrations/axum/src/: extract.rs  lib.rs  query.rs  response.rs  subscription.rs
integrations/poem/: Cargo.toml
integrations/poem/src/: extractor.rs  lib.rs  query.rs  response.rs  subscription.rs
integrations/rocket/: Cargo.toml
integrations/rocket/src/: lib.rs  query_deserializer.rs
integrations/tide/: Cargo.toml
integrations/tide/src/: lib.rs  subscription.rs
integrations/tide/tests/: graphql.rs  test_utils.rs
integrations/warp/: Cargo.toml
integrations/warp/src/: batch_request.rs  error.rs  lib.rs  request.rs  subscription.rs
parser/: Cargo.toml  build.rs
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: parse_query.rs
parser/src/: error.rs  graphql.pest  lib.rs  pos.rs  query.pest  query_parser.rs  schema_parser.rs
parser/src/parse/: executable.rs  generated.rs  mod.rs  service.rs  utils.rs
parser/src/types/: executable.rs  mod.rs  service.rs
parser/tests/: codegen.rs  recursion_limit.rs
parser/tests/executables/: fragment.graphql  kitchen-sink.graphql  kitchen-sink_canonical.graphql  multiline_string.graphql  variable_directive.graphql
parser/tests/schemas/: implements_amp.graphql  implements_amp_canonical.graphql
parser/tests/services/: directive.graphql  implements.graphql  kitchen-sink.graphql  repeatable_directives.graphql
scripts/: publish-all.sh
src/: base.rs  context.rs  custom_directive.rs  datetime.rs  enum.rs  error.rs  executor.rs  graphql.pest  guard.rs  id.rs  json_writer.rs  lib.rs  look_ahead.rs  macros.rs  mutation_resolver.rs  prelude.rs  query.rs  registry.rs  request.rs  resolver.rs  response.rs  runtime.rs  scalar.rs  schema.rs  serialize_resp.rs  subscription.rs  type.rs  type_mark.rs  uuid.rs
templates/: graphiql_source.jinja
tests/: batch_request.rs  binary.rs  complex_object.rs  complexity_and_depth.rs  connection.rs  default_value.rs  defer.rs  derive.rs  derived_field.rs  description.rs  directive.rs  dynamic_schema.rs  enum.rs  error_ext.rs  (+50 more)
tests/merge_recursion_depth/merged_schema/: Cargo.toml
tests/merge_recursion_depth/merged_schema/src/: lib.rs
tests/merge_recursion_depth/merged_schema/tests/: cross_crate_merge.rs
value/: Cargo.toml
value/src/: de.rs  deserializer.rs  extensions.rs  lib.rs  macros.rs  ser.rs  serializer.rs  value_serde.rs  variables.rs
value/tests/: test_serde.rs
(+433 files in other folders)
