[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "A GraphQL server library implemented in Rust"
documentation = "https://docs.rs/async-graphql/"
edition = "2024"
rust-version = "1.89.0"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql"
readme = "README.md"
repository = "https://github.com/async-graphql/async-graphql"
version = "8.0.0-rc.2"

[features]
apollo_persisted_queries = ["dep:scc", "dep:sha2"]
apollo_tracing = ["dep:chrono"]
chrono = ["dep:chrono"]
chrono-duration = ["dep:chrono", "dep:iso8601"]
dataloader = ["dep:futures-channel", "dep:lru", "dep:scc"]
decimal = ["dep:rust_decimal"]
default = ["dynamic-schema", "tempfile", "graphiql"]
log = ["dep:log"]

jiff = ["dep:jiff"]
string_number = []
tempfile = ["dep:blocking", "dep:tempfile"]
secrecy = ["dep:secrecy"]
time = ["dep:time"]
tokio = ["dep:tokio"]
url = ["dep:url"]
uuid = ["dep:uuid"]
tracing = ["dep:tracing", "dep:tracing-futures"]
dynamic-schema = []
graphiql = ["dep:askama"]
raw_value = ["async-graphql-value/raw_value"]
boxed-trait = ["async-graphql-derive/boxed-trait"]

[[bench]]
harness = false
name = "static_schema"

[dependencies]
async-graphql-derive.workspace = true
async-graphql-parser.workspace = true
async-graphql-value.workspace = true


asynk-strim = "0.1.5"
async-trait.workspace = true
bytes.workspace = true
futures-util = { workspace = true, features = [
  "std",
  "io",
  "sink",
  "async-await-macro",
] }
indexmap.workspace = true
mime = "0.3.17"
multer = "3.0.0"
num-traits = "0.2.18"
pin-project-lite = "0.2.14"
regex = "1.10.4"
serde.workspace = true
serde_json.workspace = true
static_assertions_next = "1.1.2"
thiserror.workspace = true
base64 = "0.22.0"
serde_urlencoded = "0.7.1"
http.workspace = true
rustc-hash = "2.1.1"

# Feature optional dependencies
chrono = { version = "0.4.37", optional = true, default-features = false, features = [
  "clock",
  "std",
] }
chrono-tz = { version = "0.10.0", optional = true }
iso8601 = { version = "0.6.1", optional = true }
jiff = { version = "0.2.18", optional = true }
log = { version = "0.4.21", optional = true }

rust_decimal = { version = "1.35.0", optional = true, default-features = false }
secrecy = { version = "0.10.3", optional = true }
time = { version = "0.3.36", optional = true, features = [
  "parsing",
  "formatting",
  "macros",
] }
tokio = { version = "1.37.0", features = ["rt", "time"], optional = true }
tracing-futures = { version = "0.2.5", optional = true, features = [
  "std-future",
  "futures-03",
] }
tracing = { version = "0.1.41", features = ["attributes"], optional = true }
url = { version = "2.5.0", optional = true }
uuid = { version = "1.8.0", optional = true, features = ["v4", "serde"] }
tempfile = { version = "3.10.1", optional = true }

# Non-feature optional dependencies
askama = { version = "0.15.1", default-features = false, features = [
  "derive",
  "std",
], optional = true }
blocking = { version = "1.6.1", optional = true }
futures-channel = { version = "0.3.30", optional = true }
lru = { version = "0.16.2", optional = true }
sha2 = { version = "0.10.8", optional = true }
scc = { version = "3.4.13", optional = true }

[dev-dependencies]
futures-channel = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
slab = "0.4.9"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
expect-test = "1.5.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
resolver = "2"
members = [
  "value",
  "parser",
  "derive",
  "integrations/poem",
  "integrations/actix-web",
  "integrations/rocket",
  "integrations/warp",
  "integrations/axum",
  "extras",
]

[workspace.dependencies]
async-graphql = { path = ".", version = "8.0.0-rc.2", default-features = false }
async-graphql-derive = { path = "derive", version = "8.0.0-rc.2" }
async-graphql-parser = { path = "parser", version = "8.0.0-rc.2" }
async-graphql-value = { path = "value", version = "8.0.0-rc.2" }


serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
indexmap = { version = "2", features = ["serde"] }
bytes = { version = "1.6.0", features = ["serde"] }
thiserror = "2.0.17"
async-trait = "0.1.79"
futures-util = { version = "0.3.30", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
http = { package = "http", version = "1.1.0" }
