[package]
name = "async-graphql-actix-web"
version = "0.7.7"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "async-graphql for actix-web"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/sunli829/async-graphql"
repository = "https://github.com/sunli829/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "..", version = "1.7.7" }
actix-web = "2.0.0"
actix-multipart = "0.2.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
futures = "0.3.0"
mime = "0.3.16"
bytes = "0.5.4"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
slab = "0.4.2"
actix_derive = "0.5.0"

[dev-dependencies]
actix-rt = "1.0.0"
