[package]
name = "async-graphql-actix-web"
version = "1.14.7"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "async-graphql for actix-web"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "..", version = "1.14.0" }
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
actix-rt = "1.0.0"
futures = "0.3.0"
bytes = "0.5.4"
serde_json = "1.0.48"
