[package]
name = "async-graphql-derive"
version = "0.10.3"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "The GraphQL server library implemented by rust"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/sunli829/async-graphql"
repository = "https://github.com/sunli829/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
syn = { version = "1.0.13", features = ["full"] }
quote = "=1.0.3"
graphql-parser = "0.2.3"
