[package]
name = "async-graphql-derive"
version = "1.12.18"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "Macros for async-graphql"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
async-graphql-parser = { path = "../async-graphql-parser", version = "0.5.1" }
proc-macro2 = "1.0.6"
syn = { version = "1.0.20", features = ["full", "extra-traits"] }
quote = "1.0.3"
Inflector = "0.11.4"
proc-macro-crate = "0.1.4"
