[package]
name = "async-graphql-tide"
version = "1.0.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "async-graphql for tide"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/sunli829/async-graphql"
repository = "https://github.com/sunli829/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "..", version = "1.9.20" }
tide = "0.8"
http-types = "1.2.0"

[dev-dependencies]
async-std = "1.5.0"
surf = "2.0.0-alpha.1"
serde_json = "1.0.51"
