[package]
name = "async-graphql-tide"
version = "1.15.13"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "async-graphql for tide"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "..", version = "1.15.0" }
tide = "0.11.0"
async-trait = "0.1.30"
serde_json = "1.0.51"
futures = "0.3.4"
async-std = "1.6.0"

[dev-dependencies]
smol = { version = "0.1.10", features = ["tokio02"] }
reqwest = "0.10.4"
