[package]
name = "async-graphql-warp"
version = "1.4.17"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"
description = "async-graphql for warp"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "..", version = "1.12.17" }
warp = "0.2.2"
futures = "0.3.0"
bytes = "0.5.4"
serde_json = "1.0.48"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
