[package]
name = "graphql-benchmark"
version = "2.4.9"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
futures = "0.3.6"
serde_json = "*"
async-graphql-parser = { path = "../parser" }
async-graphql = { path = ".." }
jemallocator = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = "0.3"
simple = { path = "simple" }
chat = { path = "chat" }

[features]
jemalloc = ["jemallocator"]

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "chat"
harness = false
