[package]
name = "graphql-benchmark"
version = "2.4.10"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3.13"
serde_json = "1.0.64"
async-graphql-parser = { path = "../parser" }
async-graphql = { path = ".." }
jemallocator = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = "0.3.4"
simple = { path = "simple" }
chat = { path = "chat" }

[features]
jemalloc = ["jemallocator"]

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "chat"
harness = false
