[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "Macros for async-graphql"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT/Apache-2.0"
name = "async-graphql-derive"
repository = "https://github.com/async-graphql/async-graphql"
version = "5.0.0"

[lib]
proc-macro = true

[dependencies]
async-graphql-parser = { path = "../parser", version = "5.0.0-alpha.5" }

Inflector = "0.11.4"
darling = "0.14.0"
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.64", features = [
  "full",
  "extra-traits",
  "visit-mut",
  "visit",
] }
thiserror = "1.0.24"
