[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "Macros for async-graphql"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-derive"
repository = "https://github.com/async-graphql/async-graphql"
version = "6.0.1"

[lib]
proc-macro = true

[dependencies]
async-graphql-parser.workspace = true

Inflector = "0.11.4"
darling = "0.20.1"
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
  "visit-mut",
  "visit",
] }
thiserror.workspace = true
strum= { version ="0.25.0", features=["derive"]}
