[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "Macros for async-graphql"
documentation = "https://docs.rs/async-graphql/"
edition = "2024"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-derive"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.17"

[lib]
proc-macro = true

[features]
boxed-trait = []

[dependencies]
async-graphql-parser.workspace = true

Inflector = "0.11.4"
darling = "0.20.10"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0", features = ["extra-traits", "visit-mut", "visit"] }
thiserror.workspace = true
strum = { version = "0.26.2", features = ["derive"] }