[package]
name = "async-graphql-extras"
version = "0.1.0-rc.3"
edition = "2024"
rust-version = "1.89.0"
authors = ["Aumetra Weisman <aumetra@cryptolab.net>"]
categories = ["network-programming", "asynchronous"]
description = "Extra extensions for async-graphql"
documentation = "https://docs.rs/async-graphql-extras/"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-graphql/async-graphql"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["email-address"]
email-address = ["dep:email_address"]
opentelemetry = ["dep:opentelemetry"]

[dependencies]
async-graphql.workspace = true
async-graphql-parser.workspace = true
async-graphql-value.workspace = true

async-trait.workspace = true
serde_json.workspace = true
futures-util = { workspace = true, features = ["std"] }

# Feature dependencies
email_address = { version = "0.2.9", optional = true }
opentelemetry = { version = "0.31.0", optional = true, default-features = false, features = [
  "trace",
] }
