[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "GraphQL query parser for async-graphql"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT/Apache-2.0"
name = "async-graphql-parser"
repository = "https://github.com/async-graphql/async-graphql"
version = "5.0.0-alpha.5"

[dependencies]
async-graphql-value = { path = "../value", version = "5.0.0-alpha.5" }
pest = "2.4.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
pest_generator = "2.4.1"
proc-macro2 = "1.0.37"
syn = "1.0.103"
prettyplease = "0.1.21"
