[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for actix-web"
documentation = "https://docs.rs/async-graphql-actix-web/"
edition = "2024"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-actix-web"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.17"

[dependencies]
async-graphql.workspace = true

actix = "0.13.5"
actix-http = "3.11.0"
actix-web = { version = "4.11.0", default-features = false }
actix-web-actors = "4.3.1"
async-channel = "2.5.0"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
serde_cbor = { version = "0.11.2", optional = true }
serde_json.workspace = true
thiserror.workspace = true
async-stream = "0.3.6"

[features]
cbor = ["serde_cbor"]
http2 = ["actix-web/http2"]
default = ["http2"]

[dev-dependencies]
async-graphql = { workspace = true, features = ["playground"] }
actix-rt = "2.10.0"
async-lock = "3.4.1"
serde = { version = "1", features = ["derive"] }
